# businesaios

./: .dockerignore  .env.example  .env.example.prod  .env.example.staging  .env.prod.example  .gitignore  CANON_MERGE_REPORT_2026-05-06.md  COMPILE_TRIAGE_REPORT_round20.txt  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.ci.fragment  README.md  RELEASE_CLEANING_REPORT.md  RELEASE_TAG  RUNBOOK.md  conftest.py  deploy_landing.py  env.example  gitignore  main.py  manifest.json  multipart.py  mypy-world-model.ini  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.optional.txt  requirements.release.lock.txt  requirements.txt  ruff.toml  sitecustomize.py  usercustomize.py
runtime/platform/support/: .env.example  Dockerfile  Makefile  README.md  __init__.py  _command_surface.py  command_audit.py  command_catalog.py  command_registry.py  common.py  coverage.ini  docker-compose.yml  entrypoint_contract.py  import_doors.py  import_doors_registry.json  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
runtime/platform/support/canon/: allowed_dependency_graph.py  anti_second_brain_rules.py  architecture_constitution.py  constants.py  contracts.py  decision_rights.py  enums.py  errors.py  forbidden_imports.py  ids.py  interfaces.py  invariants.py  module_boundaries.py  naming.py  versions.py
runtime/platform/support/cli/: __init__.py  _main_stub.py  audit.py  checkpoints.py  commands.py  datasets.py  evaluate.py  experiments.py  governance.py  inspect.py  lineage.py  main.py  promote.py  registry.py  rollback.py  rollout.py  train.py  workspace.py
runtime/platform/support/contracts/: __init__.py  action.py  candidate.py  checkpoint.py  episode.py  evaluation.py  experiment.py  governance.py  incidents.py  model.py  observation.py  policy.py  promotion_contract.py  reward.py  rollback.py  rollout.py  telemetry.py  trajectory.py  transition.py
runtime/platform/support/data/: __init__.py  compression.py  contracts.py  data_catalog.py  dataset_identity.py  dataset_lineage.py  dataset_loader.py  dataset_registry.py  dataset_versioning.py  dataset_writer.py  drift_checks.py  integrity_checks.py  partitioning.py  quality_checks.py  retention.py  retention_policies.py  sharding.py
runtime/platform/support/docs/: anti_second_brain_rules.md  (+12 more)
rust/businessaios_safety_core/: Cargo.toml
rust/businessaios_safety_core/src/: fixture_runner.rs  lib.rs  live_write_policy.rs  user_scenario_matrix.rs
rust/businessaios_safety_core/tests/: property_invariants.rs
(+9074 files in other folders)
