[project]
name = "businesaios"
version = "0.0.0"
description = "BusinessAIOS canonical runtime and safety gates"
requires-python = ">=3.11,<3.13"
readme = "README.md"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "T20"]
ignore = ["E501", "E741", "B904", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM", "T20"]
"scripts/*" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.businesaios]
canonical_ci_cli = "python -m scripts.ci.cli"
production_status = "alpha-staging-read-only-advisory"
decision_owner = "DecisionCore"
