[package]
name = "businessaios_safety_core"
version = "0.1.0"
edition = "2021"
description = "Pure fail-closed safety kernel for BusinessAIOS critical invariants"
license = "UNLICENSED"
publish = false

[lib]
name = "businessaios_safety_core"
path = "src/lib.rs"

[[bin]]
name = "safety_fixture_runner"
path = "src/bin/safety_fixture_runner.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
